added a div to add css & corrected github link

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 
 <body style="background-color: #212121; color: #fff;">
   <nav style="padding: 5px">
-    <a href="/" aria-current="page">GitHub</a>
+    <a target="_blank" href="https://github.com/adisuyash" aria-current="page">GitHub</a>
     <a target="_blank" href="https://www.youtube.com/@adityasuyashgupta">Youtube</a>
   </nav>
 
-  <h1>Start should change the Background color every second</h1>
+  <div class="container"></div>
+  <h1>Auto Background Color Changer</h1>
+  <p>
+    <li><strong>Start</strong> - changes the background color every second.</li>
+    <li><strong>Stop</strong> - stops changing.</li>
+  </p>
   <button id="start">Start</button>
   <button id="stop">Stop</button>
+  </div>
   <script src="script.js"></script>
 </body>
 
